<!--
  ~ Created by Abdulkerim Yıldırım (kermmyldrm@gmail.com)
  -->

<resources>
    <string name="app_name">Mate4win</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Anasayfa</string>
    <string name="menu_category">Kategori</string>
    <string name="menu_groups">Gruplar</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_settings">Ayarlar</string>
    <string name="menu_adding">Grup Ekleme</string>

    <string name="txt_mobile">Mobil Oyunlar</string>
    <string name="txt_pc">PC Oyunları</string>
    <string name="content_description">@null</string>

    <string name="first_name">Adı "nickname" Soyadı</string>

    <string name="sign_in">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Şifre</string>
    <string name="forgot_pass"><u>Şifremi Unuttum</u></string>
    <string name="contact">İletişim Bilgileri</string>


    <string name="ok">Tamam</string>
    <string name="cancel">İptal</string>
    <string name="create">Oluştur</string>
    <string name="save">Kaydet</string>
    <string name="delete">Sil</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>


    <string name="new_group">Yeni Grup Oluştur</string>
    <string name="group_settings">Grup Ayarları</string>
    <string name="update_group_information">Grup Bilgilerini Güncelle</string>
    <string name="open_post">Yeni üyelere açık</string>
    <string name="close_post">Yeni üyelere kapalı</string>
    <string name="delete_group">Grubu sil</string>
    <string name="edit_members">Üyeleri düzenle</string>



    <!-- New Group
    -->
    <string name="add_contact"><u>İletişim Bilgileri Ekle</u></string>
    <string name="title">Grup İsmi</string>
    <string name="sub_title">Grup Açıklaması</string>
    <string name="email">Email</string>
    <string name="country">Ülke</string>
    <string name="city">Şehir</string>
    <string name="telegram">Telegram</string>
    <string name="dc_adress">Discord</string>
    <string name="insta_adress">İnstagram</string>
    <string name="skype_adress">Skype</string>
    <string name="group_platform">Platform Seçiniz</string>
    <string name="select_categories">Oyun Seçiniz</string>


    <string name="sure_delete">Grubu silmek istediğinize emin misiniz?</string>
    <string name="sure_member_delete">%1$s yi gruptan çıkarmak istediğinize emin misiniz?</string>
    <string name="sure_owner_delete">Gruptan çıkmak istediğinize emin misiniz?</string>
    <string name="connection">İnternet bağlantın sıkıntılı</string>


</resources>