<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Abdulkerim Yıldırım (kermmyldrm@gmail.com)
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/default_cell_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/group_button_height"
            android:layout_gravity="center_vertical"
            android:text="@string/group_settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_back"
            android:tint="@color/black"
            android:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/group_settings_height"
            >


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/group_settings_height"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/txt_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/open_post"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_post"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:checked="true"
                    android:thumbTint="@drawable/switch_button"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/c_D2D2D2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <FrameLayout
                android:id="@+id/update_group_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/group_settings_height"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/update_group_information"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_back"
                    android:rotation="180"
                    app:tint="@color/black" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/c_D2D2D2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <FrameLayout
                android:id="@+id/update_group_members"
                android:layout_width="match_parent"
                android:layout_height="@dimen/group_settings_height"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_members"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_back"
                    android:rotation="180"
                    app:tint="@color/black" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/c_D2D2D2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <FrameLayout
                android:id="@+id/delete_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/group_settings_height"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/delete_group"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_back"
                    android:rotation="180"
                    app:tint="@color/black" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/c_D2D2D2"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>